--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,7 @@
   "icons": [
     {
       "src": "logo.png",
-      "type": "image/png",
-      "sizes": "192x192"
+      "type": "image/png"
     }
   ],
   "start_url": ".",
