--- a/.github/workflows/buildCheck.yml
+++ b/.github/workflows/buildCheck.yml
@@ -20,6 +20,9 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm install
 
+      - name: Create config
+        run: cp src/config/config.example.js src/config/config.js
+
       - name: Build
         run: |
           npm run lint
